--- a/templates/HomeMenuStudent.html
+++ b/templates/HomeMenuStudent.html
@@ -2,30 +2,203 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pensamiento Algorítmico</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    <style>
+        :root{
+            --blue: #1F57A2;
+            --white: #FFFFFF;
+            --gray: #CFCDC8;
+            --black: #000000;
+            --gold: #F5C451;
+            --sm: 14px;
+            --md: 16px;
+            --lg: 24px;
+        }
+        body {
+            background-color: var(--blue);
+            font-family: 'Space Grotesk', sans-serif;
+            margin: 0;
+            display: flex;
+        }
+        .menu_teacher_left {
+            width: 400px;
+            background-color: var(--white);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            place-items:left;
+            border-radius: 12px;
+        }
 
+        .logo {
+            width: 300px;
+            margin: 0 ;
+            margin-bottom: 12px;
+            border-radius: 8px;
+
+        }
+        .title{
+           font-size: var(--lg);
+           color: var(--blue);
+           margin-bottom: 16px;
+           margin-left: 12px;
+           text-align: left;
+        }
+        .label{
+            margin-left: 16px;
+            color: var(--blue);
+            font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: 12px;
+            margin-top: 16px;
+        }
+        .input{
+            color: var(--white);
+            background-color: var(--blue);
+            border-radius: 12px;
+            border: none;
+            height: 24px;
+            font-size: var(--md);
+            padding: 8px;
+            margin-left: 16px;
+            margin-right: 16px;
+            outline: none;
+        }
+        .input::placeholder{
+            color: var(--white);
+        }
+        .primary-button {
+            font-size: var(--md);
+            background-color: var(--gold);
+            border-radius: 12px;
+            border: none;
+            height: 40px;
+            color: var(--white);
+            margin-top: 16px;
+            margin-left: 16px;
+            margin-right: 16px;
+            cursor: pointer;
+        }
+
+li{
+    list-style: none;
+    margin-left: 20px;
+    display: flex;
+    align-items: left;
+    margin-bottom: 16px;
+
+
+}
+.mini-icon{
+    width: 32px;
+    height: 32px;
+    margin-right: 0px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+    cursor: pointer;
+}
+.code{
+    width: 20px;
+    height: 20px;
+    margin-right: 12px;
+}
+.menu_teacher_right{
+     display: flex;
+    justify-content: center;
+     width: 100%;
+}
+.input{
+            color: var(--blue);
+            background-color: var(--gray);
+            border-radius: 12px;
+            border: none;
+            height: 16px;
+            font-size: var(--md);
+            padding: 8px;
+            margin-left: 16px;
+            margin-right: 16px;
+            outline: none;
+        }
+
+        .primary-button-right {
+            font-size: var(--lg);
+            background-color: var(--white);
+            border-radius: 12px;
+            margin-top: 0;
+            margin-left: 4px;
+            margin-right: 4px;
+            border: none;
+            height: 64px;
+            width: 252px;
+            color: var(--blue);
+            cursor: pointer;
+
+
+        }
+        .primary-button {
+            font-size: var(--md);
+            background-color: var(--blue);
+            border-radius: 12px;
+            border: none;
+            height: 32px;
+            color: var(--white);
+            margin-left: 16px;
+            margin-right: 16px;
+            margin-bottom: 16px;
+            margin-top: 8px;
+            cursor: pointer;
+
+
+        }
+        .form-add{
+            display: flex;
+            flex-direction: column;
+        }
+
+    </style>
 </head>
 <body>
-    <div id="header">
-        <h1>Pensamiento Algorítmico</h1>
-    </div>
-
-    <div id="left-menu">
-        <div id="vertical-menu">
-            <p>Temas:</p>
-            <ul>
-                <li><a href="#">Actividad 1</a></li>
-                <li><a href="#">Actividad 2</a></li>
-                <!-- Agrega más elementos si es necesario -->
-            </ul>
+<div class="menu_teacher_left">
+     <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
+            <h2 class = "title">Temáticas : </h2>
+                {% for todo in Actividades %}
+                <li>
+                    <img src="{{ url_for('static', filename='code.png') }}" class="code">
+                    <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
+                    <a href="{{ url_for('go', Menu=loop.index0, actividad=todo['task'], CourseName=CourseName) }}">
+                        <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
+                    </a>
+                </li>
+                {% endfor %}
+            <form class="form-add" action="{{ url_for('add', CourseName=CourseName) }}" method="post">
+                <input type="text" name="todo" class="input input-add-list">
+                <button type="submit" class="primary-button">Añadir Temática</button>
+            </form>
         </div>
-    </div>
-
-    <div id="content">
-        <button class="tab-button">Actividades</button>
-        <button class="tab-button">Ranking</button>
-        <button class="tab-button">Calificar</button>
-        <button id="add-exercise-button">Agregar Ejercicio</button>
-    </div>
+        <div class="menu_teacher_right">
+            <div class="menu-item">
+                <form action="/HomeMenuTeacher">
+                    <button  class= "primary-button-right" type="submit">Actividades</button>
+                </form>
+            </div>
+            <div class="menu-item">
+                <form action="/RankingView">
+                    <button  class= "primary-button-right" type="submit">Ranking</button>
+                </form>
+            </div>
+            <div class="menu-item">
+                <form action="/QualifyView">
+                    <button class= "primary-button-right" type="submit">Calificar</button>
+                </form>
+            </div>
+            <div class="menu-item">
+                <form action="/sign_off">
+                    <button  class= "primary-button-right" type="submit">Cerrar Sesión</button>
+                </form>
+            </div>
+        </div>
 </body>
 </html>
