--- a/templates/HomeMenuTeacher.html
+++ b/templates/HomeMenuTeacher.html
@@ -201,6 +201,11 @@ li{
                     <button class= "primary-button-right" type="submit">Calificar</button>
                 </form>
             </div>
+            <div class="menu-item">
+                <form action="/sign_off">
+                    <button  class= "primary-button-right" type="submit">Cerrar Sesión</button>
+                </form>
+            </div>
         </div>
 </body>
 </html>
