--- a/templates/Index.html
+++ b/templates/Index.html
@@ -97,17 +97,18 @@
             margin-bottom: 8px;
         }
 
-<<<<<<< HEAD
         .notification{
-            background-color: var(--white);
             color: var(--blue);
+            background-color: white;
+            font-size: var(--lg);
+            display: flex;
+            justify-content: center;
+            border-radius: 16px;
+            margin: 12px 12px 0 4px;
+            justify-self: center;
+
 
         }
-    
-        
-=======
->>>>>>> 88f1237 (Avance Interfaz Curso)
-
 
     </style>
 </head>
