--- a/templates/CreateExercise.html
+++ b/templates/CreateExercise.html
@@ -2,62 +2,143 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pensamiento Algorítmico</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    <style>
+        :root{
+            --blue: #1F57A2;
+            --white: #FFFFFF;
+            --gray: #CFCDC8;
+            --black: #000000;
+            --gold: #F5C451;
+            --sm: 14px;
+            --md: 16px;
+            --lg: 24px;
+        }
+        body {
+            background-color: var(--blue);
+            font-family: 'Space Grotesk', sans-serif;
+            margin: 0;
+        }
+        .login {
+            width: 100%;
+            height: 100vh;
+            display: grid;
+            place-items: center;
+        }
+        .form_container {
+            background-color: white;
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+            width: 720px;
+            border-radius: 16px;
+            padding: 20px;
+
+        }
+        .logo {
+            width: 300px;
+            margin: 0 auto;
+            margin-bottom: 24px;
+            border-radius: 8px;
+
+        }
+        .title{
+           font-size: var(--lg);
+           color: var(--blue);
+           margin-bottom: 12px;
+           text-align: center;
+        }
+        .form{
+            display: flex;
+            flex-direction: column;
+        }
+        .label{
+            margin-left: 16px;
+            color: var(--blue);
+            font-size: var(--sm);
+            font-weight: bold;
+            margin-bottom: 12px;
+            margin-top: 16px;
+        }
+        .input{
+            color: var(--white);
+            background-color: var(--blue);
+            border-radius: 12px;
+            height: 36px;
+            border: none;
+            font-size: var(--md);
+            padding: 8px;
+            margin-left: 16px;
+            margin-right: 16px;
+            outline: none;
+        }
+        .input::placeholder{
+            color: var(--white);
+        }
+        .input-big{
+            height: 256px;
+        }
+        .primary-button {
+            font-size: var(--md);
+            background-color: var(--gold);
+            border-radius: 12px;
+            border: none;
+            height: 40px;
+            color: var(--white);
+            margin-top: 16px;
+            margin-left: 16px;
+            margin-right: 16px;
+            margin-bottom: 4px;
+            cursor: pointer;
+
+
+        }
+        .register-button{
+            background-color: var(--white);
+            color: var(--blue);
+            margin-bottom: 8px;
+        }
+
+        .notification{
+            color: var(--blue);
+            background-color: white;
+            font-size: var(--lg);
+            display: flex;
+            justify-content: center;
+            border-radius: 16px;
+            margin: 12px 12px 0 4px;
+            justify-self: center;
+
+
+        }
+
+    .create-exercise {
+            width: 100%;
+            height: 100vh;
+            display: grid;
+            place-items: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Pensamiento Algorítmico</h1>
-    <h2>Temas de Estudio</h2>
-    <ul>
-        {% for todo in Actividades %}
-        <li>
-            <span {%if todo[done] %} style="text-decoration: line-through" {%endif %}>{{ todo["task"] }}</span>
-            <a href="{{ url_for('go', Menu=loop.index0, actividad=todo['task'],CourseName=CourseName) }}">⏩</a>
-            <a href="{{ url_for('edit', Menu=loop.index0,actividad=todo['task'], CourseName=CourseName) }}">Edit</a>
-            <a href="{{ url_for('delete', Menu=loop.index0,CourseName=CourseName) }}">Delete</a>
-        </li>
-        {% endfor %}
-    </ul>
-    <form action="{{ url_for('add', CourseName=CourseName) }}" method="post">
-        <input type="text" name="todo">
-        <button type="submit">Añadir Tematica</button>
-    </form>
-    <div id="content">
-        <div class="menu-item">
-            <form action="/HomeMenuTeacher">
-                <button type="submit">Actividades</button>
-            </form>
-        </div>
-        <div class="menu-item">
-            <form action="/RankingView">
-                <button type="submit">Ranking</button>
-            </form>
-        </div>
-        <div class="menu-item">
-            <form action="/QualifyView">
-                <button type="submit">Calificar</button>
-            </form>
-        </div>
-        <div class="menu-item">
-                <form action="/sign_off">
-                    <button  class= "primary-button-right" type="submit">Cerrar Sesión</button>
-                </form>
-            </div>
-    </div>
+    <div class="create-exercise">
+        <div class="form_container">
+            <img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo">
+            <h1 class="title">Crear Ejercicio</h1>
+        <form class="form form-login" action="/CreateExercise" method="post">
+            <label class="label" for="nameExercise">Nombre del Ejercicio:</label>
+            <input class= "input"type="text" name="nameExercise" id="nameExercise" placeholder="Nombre Ejercicio">
 
-    <div class="exercise-form">
-        <h1>Crear Ejercicio</h1>
-        <form id="exercise-form" action="/CreateExercise" method="post">
-            <label for="nameExercise">Nombre del Ejercicio:</label>
-            <input type="text" name="nameExercise" id="nameExercise" required>
-
-            <label for="availability">Disponibilidad:</label>
-            <select name="availability" id="availability" required>
+            <label class="label" for="availability">Disponibilidad:</label>
+            <select class="input" name="availability" id="availability" required>
                 <option value="True">Sí</option>
                 <option value="False">No</option>
             </select>
 
-            <label for="difficulty">Dificultad:</label>
-            <select name="difficulty" id="difficulty" required>
+            <label class="label" for="difficulty">Dificultad:</label>
+            <select class= "input"name="difficulty" id="difficulty" required>
                 <option value="Muy Fácil">Muy Fácil</option>
                 <option value="Fácil">Fácil</option>
                 <option value="Moderado">Moderado</option>
@@ -65,12 +146,11 @@
                 <option value="Muy Difícil">Muy Difícil</option>
             </select>
 
-            <label for="statement">Descripción:</label>
-            <input type="text" name="statement" id="statement" required>
-
-            <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
-            <input type="hidden" name="CourseName" value="{{ CourseName }}">
-            <button type="submit">Crear Ejercicio</button>
+            <label  class="label" for="statement">Descripción:</label>
+            <textarea rows="10" cols="30" class= "input input-big"type="text" name="statement" id="statement" placeholder="Ingresa la Descripción"></textarea>
+            <input type="hidden" class= "input" name="nameActivity" value="{{ nameActivity }}">
+            <input type="hidden"class= "input" name="CourseName" value="{{ CourseName }}">
+            <button class= "primary-button"type="submit">Crear Ejercicio</button>
         </form>
     </div>
 </body>
