Arreglando problemas del Sprint 1

--- a/templates/CreateExercise.html
+++ b/templates/CreateExercise.html
@@ -153,6 +153,7 @@
             <button class= "primary-button"type="submit">Crear Ejercicio</button>
         </form>
     </div>
+    </div>
 </body>
 </html>
 
