--- a/templates/HomeMenuTeacher.html
+++ b/templates/HomeMenuTeacher.html
@@ -251,23 +251,27 @@ li{
                </li>
                {% endfor %}
            <form class="form-add" action="{{ url_for('add', CourseName=CourseName) }}" method="post">
-               <input type="text" name="todo" class="input input-add-list" maxlength="30" placeholder="Añadir Temática">
+               <input type="text" name="todo" class="input input-add-list" maxlength="30" placeholder="Añadir Temática" required>
+
                <button type="submit" class="primary-button-teacher" >+</button>
            </form>
        </div>
        <div class="menu_teacher_right">
            <div class="menu-item">
                <form action="/HomeMenuTeacher">
+                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <button  class= "primary-button-right" type="submit">Actividades</button>
                </form>
            </div>
            <div class="menu-item">
                <form action="/RankingView">
+                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <button  class= "primary-button-right" type="submit">Ranking</button>
                </form>
            </div>
            <div class="menu-item">
                <form action="/QualifyView">
+                   <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <button class= "primary-button-right" type="submit">Calificar</button>
                </form>
            </div>
