--- a/templates/HomeMenu_forActivityTeacher.html
+++ b/templates/HomeMenu_forActivityTeacher.html
@@ -290,7 +290,7 @@ li{
                 {% endfor %}
                 </ul>
                 <form class="form-add" action="{{ url_for('add', CourseName=CourseName) }}" method="post">
-                    <input type="text" name="todo" class="input input-add-list" maxlength="30" placeholder="Añadir Temática">
+                    <input type="text" name="todo" class="input input-add-list" maxlength="30" placeholder="Añadir Temática" required>
                     <button type="submit" class="primary-button-teacher" >+</button>
                 </form>
             </div>
@@ -300,16 +300,19 @@ li{
                     <div class="container-little-buttons"> 
                         <div class="menu-item">
                             <form action="/HomeMenuTeacher">
+                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
                                 <button  class= "primary-button-right" type="submit">Actividades</button>
                             </form>
                         </div>
                         <div class="menu-item">
                             <form action="/RankingView">
+                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
                                 <button  class= "primary-button-right" type="submit">Ranking</button>
                             </form>
                         </div>
                         <div class="menu-item">
                             <form action="/QualifyView">
+                                <input type="hidden" name="CourseName" value="{{ CourseName }}">
                                 <button class= "primary-button-right" type="submit">Calificar</button>
                             </form>
                         </div>
