--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -91,7 +91,7 @@
     <a class="a espacio-cuadrado">
 
         <form action="{{ url_for('editCourse', Menu=Menu , CourseName=CourseName)}}" method="post" class="form form-edit-course">
-                <input type="text" name="course" placeholder="Nuevo Nombre" class="input input-course" value="{{course['task']}}">
+                <input type="text" name="course" placeholder="Nuevo Nombre" class="input input-course" value="{{course['task']}}" required>
                 <button type="submit" class="primary-button login-button">Save</button>
         </form>
     </a>
