--- a/templates/HomeMenuTeacher.html
+++ b/templates/HomeMenuTeacher.html
@@ -216,12 +216,44 @@ li{
         justify-self: center;
         cursor: pointer;
     }
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    background-color: white;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+}
 
     </style>
 </head>
 <body>
 <div class="full-container">
 <div class="nav-bar"><img src="{{ url_for('static', filename='Banner.jpg') }}"  alt="logo" class="logo-nav">
+
+
     <form class="out" action="/sign_off">
         <a class="log_out">
             <button type="submit" class="log_out-button">
@@ -229,6 +261,31 @@ li{
             </button>
         </a>
         </form>
+
+<script>
+    function openModal(idCourse) {
+        var modal = document.getElementById("myModal");
+        var courseIdSpan = document.getElementById("courseId");
+        courseIdSpan.innerHTML = idCourse;
+        modal.style.display = "block";
+    }
+    function closeModal() {
+        var modal = document.getElementById("myModal");
+        modal.style.display = "none";
+    }
+</script>
+        <div id="myModal" class="modal">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <p>ID del curso: <span id="courseId"></span></p>
+    </div>
+</div>
+
+    <form action="/generateCode">
+    <input type="hidden" name="CourseName" value="{{ CourseName }}">
+    <button type="button" class="log_out-button" onclick="openModal('{{ idCourse }}')">generar código</button>
+</form>
+
 
 </div>
 <div class="container-down">
@@ -260,7 +317,7 @@ li{
            <div class="menu-item">
                <form action="/HomeMenuTeacher">
                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                   <button  class= "primary-button-right" type="submit">Actividades</button>
+                   <button  class= "primary-button-right" type="submit">Tematicas</button>
                </form>
            </div>
            <div class="menu-item">
