--- a/templates/RankingStudent.html
+++ b/templates/RankingStudent.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
+    <title>Ranking de Estudiantes</title>
     <style>
         :root{
             --blue: #1F57A2;
@@ -239,7 +240,7 @@ li{
                <li>
                    <img src="{{ url_for('static', filename='book.png') }}" class="book">
                    <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
-                   <a  href="{{ url_for('goThemeStudent', Menu=loop.index0, actividad=todo['task'], CourseName=CourseName) }}">
+                   <a  href="{{ url_for('go', Menu=loop.index0, actividad=todo['task'], CourseName=CourseName) }}">
                        <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
                    </a>
 
@@ -259,13 +260,20 @@ li{
                    <input type="hidden" name="CourseName" value="{{ CourseName }}">
                    <button  class= "primary-button-right" type="submit">Ranking</button>
                </form>
-               <div class="menu-item">
-                   <form action="/DeliveriesStudent">
-                       <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                       <button  class= "primary-button-right" type="submit">Entregas</button>
-                   </form>
-               </div>
-       </div>
+           </div>
+           <h1>Ranking de Estudiantes</h1>
+    <table>
+        <tr>
+            <th>Nombre y Apellido</th>
+            <th>    Puntaje</th>
+        </tr>
+        {% for estudiante, puntaje in ranking_students.items() %}
+            <tr>
+                <td>{{ estudiante }}</td>
+                <td>{{ puntaje }}</td>
+            </tr>
+        {% endfor %}
+    </table>
    </div>
 </div>
 </div>
