--- a/templates/HomeMenu_forActivityTeacher.html
+++ b/templates/HomeMenu_forActivityTeacher.html
@@ -301,7 +301,7 @@ li{
                         <div class="menu-item">
                             <form action="/HomeMenuTeacher">
                                 <input type="hidden" name="CourseName" value="{{ CourseName }}">
-                                <button  class= "primary-button-right" type="submit">Actividades</button>
+                                <button  class= "primary-button-right" type="submit">Tematicas</button>
                             </form>
                         </div>
                         <div class="menu-item">
