--- a/templates/RankingStudent.html
+++ b/templates/RankingStudent.html
@@ -240,7 +240,7 @@ li{
                <li>
                    <img src="{{ url_for('static', filename='book.png') }}" class="book">
                    <span {% if todo[done] %} style="text-decoration: line-through" {% endif %}>{{ todo["task"] }}</span>
-                   <a  href="{{ url_for('go', Menu=loop.index0, actividad=todo['task'], CourseName=CourseName) }}">
+                   <a  href="{{ url_for('goThemeStudent', Menu=loop.index0, actividad=todo['task'], CourseName=CourseName) }}">
                        <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
                    </a>
 
