--- a/templates/SelectCourseView.html
+++ b/templates/SelectCourseView.html
@@ -148,16 +148,16 @@ li{
                 <li>
                     <img src="{{ url_for('static', filename='group.png') }}" class="group">
                     <span {% if course[done] %} style="text-decoration: line-through" {% endif %}>{{ course["task"] }}</span>
-                    <a href="{{ url_for('goCourse', Menu=loop.index0,CourseName=course['task']) }}">
+                    <a href="{{ url_for('goCourse', Menu=loop.index0, CourseName=course['task']) }}">
                         <img src="{{ url_for('static', filename='go.png') }}" class="mini-icon go">
                     </a>
                     
 
-                    <a href="{{ url_for('editCourse', Menu=loop.index0,CourseName=course['task'],email=email) }}">
+                    <a href="{{ url_for('editCourse', Menu=loop.index0, CourseName=course['task'], email=email) }}">
                         <img  src="{{ url_for('static', filename='edit.png') }}"  class=" mini-icon pencil">
                     </a>
 
-                    <a href="{{ url_for('deleteCourse', Menu=loop.index0, CourseName=course['task']) }}">
+                    <a href="{{ url_for('deleteCourse', Menu=loop.index0, CourseName=course['task'], email=email) }}">
                         <img  src="{{ url_for('static', filename='delete.png') }}"  class=" mini-icon delete">
                     </a>
                 </li>
