--- a/templates/editCourse.html
+++ b/templates/editCourse.html
@@ -90,8 +90,8 @@
             <h1 class="title">Editar Curso</h1>
     <a class="a espacio-cuadrado">
 
-        <form action="{{ url_for('editCourse', Menu=Menu , CourseName=CourseName)}}" method="post" class="form form-edit-course">
-                <input type="text" name="course" placeholder="Nuevo Nombre" class="input input-course" value="{{course['task']}}" required>
+        <form action="{{ url_for('editCourse', Menu=Menu , CourseName=CourseName, email=email)}}" method="post" class="form form-edit-course">
+                <input type="text" name="course" placeholder="{{CourseName}}" class="input input-course" value="{{CourseName}}" required style="color: #999;">
                 <button type="submit" class="primary-button login-button">Save</button>
         </form>
     </a>
