Puliendo el CRUD de los cursos, tematicas y ejercicios

--- a/templates/ExerciseStudent.html
+++ b/templates/ExerciseStudent.html
@@ -332,7 +332,7 @@ li{
                                 <form action="/submitOrExecute" >
                                     <input type="hidden" name="CourseName" value="{{ CourseName }}">
                                     <input type="hidden" name="nameActivity" value="{{ nameActivity }}">
-                                    <input type="hidden" name="exerciseName" value="{{ exerciseObject[0] }}">
+                                    <input type="hidden" name="exerciseName" value="{{ exerciseObject }}">
                                     <textarea class="input" name="code" placeholder="Escribe tu código aquí"></textarea>
                                     <button class="primary-button" type="submit" name="action" value="Ejecutar">Ejecutar</button>
                                     <button class="primary-button" type="submit" name="action" value="EnviarSolucion">Enviar Solución</button>
